...
                    android:layout_width="match_parent"
                    android:layout_height="82dp"
                    android:background="@color/frame2"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/output_screen"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_margin="1dp"
                        android:gravity="center|right"
                        android:autoSizeTextType="uniform"
                        android:autoSizeMinTextSize="30dp"
...
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/seven"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="7"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_background"/>
                    <Button
                        android:id="@+id/eight"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="8"
                        android:textSize="20dp"
...
                        android:layout_margin="5dp"
                        android:text="9"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_background"/>
                    <Button
                        android:id="@+id/multiplication"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="*"
                        android:textSize="20dp"
...
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/four"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="4"
                        android:textSize="20dp"
...
                        android:layout_margin="5dp"
                        android:text="5"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_background"/>
                    <Button
                        android:id="@+id/six"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="6"
                        android:textSize="20dp"
...
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/one"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="1"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_background"/>
                    <Button
                        android:id="@+id/two"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="2"
                        android:textSize="20dp"
...
                        android:layout_margin="5dp"
                        android:text="3"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_background"/>
                    <Button
                        android:id="@+id/plus"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="+"
                        android:textSize="20dp"
...
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="4"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decimal_separator"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="."
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_background"/>
                    <Button
                        android:id="@+id/zero"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="0"
                        android:textSize="20dp"
...
                        android:layout_margin="5dp"
                        android:text="←"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:background="@drawable/button_background"/>
                    <Button
                        android:id="@+id/equals"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="fill_parent"
                        android:layout_margin="5dp"
                        android:text="="
                        android:textSize="20dp"
...
